Fixed up stupid MathJax rendering problems

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -265,8 +265,13 @@
     "r_{11} & r_{12} & r_{13} \\\\\n",
     "r_{21} & r_{22} & r_{23} \\\\\n",
     "r_{31} & r_{32} & r_{33} \n",
-    "\\end{bmatrix}$$\n",
-    "\n",
+    "\\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There are 9 parameters in the matrix, but not all possible values of 9\n",
     "parameters correspond to valid rotation matrices. To qualify as a\n",
     "rotation, the matrix must satisfy the two properties:\n",
@@ -307,11 +312,15 @@
     "***************\n",
     "\n",
     "First, the matrix for rotation about the $Z$ axis contains a 2D rotation\n",
-    "matrix in its upper corner: $$R_Z(\\theta) = \\begin{bmatrix}\n",
+    "matrix in its upper corner:\n",
+    "\n",
+    "$$R_Z(\\theta) = \\begin{bmatrix}\n",
     "\\cos \\theta  & -\\sin \\theta   & 0 \\\\\n",
     "\\sin\\theta  & \\cos \\theta   & 0 \\\\\n",
     "0 & 0 & 1\n",
-    "\\end{bmatrix}$$ This can be interpreted by imagining the $Z$ axis\n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "This can be interpreted by imagining the $Z$ axis\n",
     "pointing out of the page, and the $X$ and $Y$ axes marking the axes of a\n",
     "standard graph on the page. The rotation about $\\theta$ is a CCW\n",
     "rotation in the plane of the page. Notice that the $Z$ coordinate of any\n",
@@ -322,11 +331,14 @@
     "rotation matrix.\n",
     "\n",
     "The rotation about the $X$ axis is similar, with a 2D rotation matrix\n",
-    "appearing along the $Y$ and $Z$ axes: $$R_X(\\theta) = \\begin{bmatrix}\n",
+    "appearing along the $Y$ and $Z$ axes:\n",
+    "$$R_X(\\theta) = \\begin{bmatrix}\n",
     "1 & 0 & 0 \\\\\n",
     "0 & \\cos \\theta  & -\\sin \\theta  \\\\\n",
     "0 & \\sin\\theta  & \\cos \\theta   \n",
-    "\\end{bmatrix}.$$ Here the $X$ coordinate is preserved while the $Y$\n",
+    "\\end{bmatrix}.$$\n",
+    "\n",
+    "Here the $X$ coordinate is preserved while the $Y$\n",
     "and $Z$ entries perform a 2D rotation.\n",
     "\n",
     "Finally, the rotation about the $Y$ axis is similar, but with a sign\n",
@@ -334,7 +346,9 @@
     "\\cos \\theta & 0 & \\sin\\theta \\\\\n",
     "0 & 1 & 0\\\\\n",
     "-\\sin \\theta & 0 & \\cos \\theta   \n",
-    "\\end{bmatrix}.$$ The reason why the $-\\sin \\theta$ term switches to\n",
+    "\\end{bmatrix}.$$\n",
+    "\n",
+    "The reason why the $-\\sin \\theta$ term switches to\n",
     "below the diagonal is that if one were to orient a frame so the $Y$ axis\n",
     "points out of the page, and align the $X$ axis to point rightward, the\n",
     "$Z$ axis would point downward instead of upward. Instead, the matrix can\n",
@@ -353,7 +367,14 @@
     "$Z$, are rotated to post-rotation axes $X^\\prime$, $Y^\\prime$, and\n",
     "$Z^\\prime$, respectively. The first column represents the coordinates of\n",
     "$X^\\prime$ axis *relative to the original frame* after rotation\n",
-    "$$\\V{x}^\\prime = \\begin{bmatrix} r_{11} \\\\ r_{21} \\\\ r_{31} \\end{bmatrix}.$$ Similarly, the\n",
+    "$$\\V{x}^\\prime = \\begin{bmatrix} r_{11} \\\\ r_{21} \\\\ r_{31} \\end{bmatrix}.$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, the\n",
     "second column gives $\\V{y}^\\prime = (r_{12},r_{22},r_{32})$ and the\n",
     "third column gives $\\V{z}^\\prime = (r_{13},r_{23},r_{33})$.\n",
     "\n",
@@ -659,8 +680,13 @@
     "matrix notation\n",
     "$$\\hat{\\V{v}} = \\begin{bmatrix} 0 & -v_z & v_y \\\\ v_z & 0 & -v_x \\\\ -v_y & v_x & 0 \\end{bmatrix}, \\label{eq:CrossProductMatrix}$$\n",
     "so called because\n",
-    "$\\hat{\\V{v}} \\V{w} = \\V{v} \\times \\V{w}$.\n",
-    "\n",
+    "$\\hat{\\V{v}} \\V{w} = \\V{v} \\times \\V{w}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Hence we can express the term $\\V{a} \\times \\V{p} = \\hat{\\V{a}} \\V{p}$\n",
     "as a matrix multiplication. Also, we can express the term\n",
     "$\\V{p} - (\\V{a} \\cdot \\V{p}) \\V{a} = - \\V{a} \\times (\\V{a} \\times \\V{p}) = -\\hat{\\V{a}}^2 \\V{p}$,\n",
@@ -669,7 +695,14 @@
     "\\V{p}^\\prime &= \\cos \\theta \\V{p} + \\sin \\theta (\\V{a} \\times \\V{p}) + (1-\\cos \\theta) (\\V{a} \\cdot \\V{p}) \\V{a} - \\V{p}) + (1-\\cos \\theta) \\V{p} \\\\\n",
     " &=\\V{p} + \\sin \\theta \\hat{\\V{a}} \\V{p} + (1-\\cos\\theta) \\hat{\\V{a}}^2 \\V{p} \\\\\n",
     " &= (I + \\sin \\theta \\hat{\\V{a}} + (1-\\cos\\theta) \\hat{\\V{a}}^2 ) \\V{p}\n",
-    "\\end{split}$$ The parenthesized term is the rotation matrix\n",
+    "\\end{split}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The parenthesized term is the rotation matrix\n",
     "corresponding to the axis-angle representation:\n",
     "$$R_{aa}(\\V{a},\\theta) = \n",
     "I + \\sin \\theta \\hat{\\V{a}} + (1-\\cos\\theta) \\hat{\\V{a}}^2.$$\n",
@@ -1030,26 +1063,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "code_folding": []
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyQt4/PyQt5 are not available... try running \"pip3 install PyQt5\"\n",
-      "*** klampt.vis: using GLUT as the visualization backend ***\n",
-      "***      Some functionality may not be available!       ***\n",
-      "klampt.visualization: QT is not available, falling back to poorer\n",
-      "GLUT interface.  Returning to another GLUT thread will not work\n",
-      "properly.\n",
-      "\n"
+      "***  klampt.vis: using Qt5 as the visualization backend  ***\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cdb8e38dcf14e099671ea595ce07383",
+       "model_id": "6e14eefe10b84cd5a1dbe1853178cbbf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1174,16 +1203,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from ipywidgets.embed import embed_minimal_html\n",
-    "embed_minimal_html('export.html', views=[kvis], title='Widgets export')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
@@ -1203,7 +1222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
