--- a/Calibration.ipynb
+++ b/Calibration.ipynb
@@ -78,7 +78,7 @@
     "\n",
     "Specifically, we define an _error function_\n",
     "$$ E(f;D) = \\sum_{i=1}^N e(\\V{y}^{(i)},f(\\V{x}^{(i)})) $$\n",
-    "with $e(\\V{y},\\hat{\\V{y}})$ a _loss function_ (a.k.a. _cost function_) that measures some notion of prediction error.  The most common loss function used in calibration is the _quadratic loss_\n",
+    "with $e(\\V{y},\\hat{\\V{y}})$ a _loss function_ (a.k.a. _cost function_) that measures some notion of prediction error.  The most common loss function used in calibration is the *quadratic loss*\n",
     "$$e(\\V{y},\\hat{\\V{y}}) = \\| \\V{y} - \\hat{\\V{y}} \\|^2.$$\n",
     "Model fitting seeks a model $f$ that achieves a low value of $E(f;D)$.\n",
     "\n",
@@ -197,8 +197,16 @@
     "\n",
     "At this point it is helpful to view the sum-of-squares as a dot product of a vector $\\V{b}-A\\V{\\theta}$ with itself, where\n",
     "$$\\V{b} = \\begin{bmatrix} y^{(1)} \\\\ \\vdots \\\\ y^{(N)} \\end{bmatrix}$$\n",
+    "\n",
     "and the matrix $A$ is given by\n",
-    "$$A = \\begin{bmatrix} \\V{x}^{(1)} & \\cdots & \\V{x}^{(N)} \\end{bmatrix}^T = \\begin{bmatrix} \\V{x}^{(1)T} \\\\ \\vdots \\\\ \\V{x}^{(N)T} \\end{bmatrix}.$$\n",
+    "$$A = \\begin{bmatrix} \\V{x}^{(1)} & \\cdots & \\V{x}^{(N)} \\end{bmatrix}^T = \\begin{bmatrix} \\V{x}^{(1)T} \\\\ \\vdots \\\\ \\V{x}^{(N)T} \\end{bmatrix}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "In other words, each of the input data points is a row in A and each of the output data points is a corresponding row in $\\V{b}$.  Then, the error function is expressed \n",
     "\n",
     "$$E(\\V{\\theta},D) = (\\V{b}-A\\V{\\theta})^T (\\V{b}-A\\V{\\theta}).$$\n",
@@ -510,8 +518,8 @@
     "* Advantages: units are same as units-of-y, gives a sense of average performance\n",
     "* Disdvantages: derivatives are even less smooth than RMSE\n",
     "\n",
-    "It can generally be concluded that SSE or MSE are the most convenient for optimization, while RMSE and MAE are most convenient for reporting results.  These can also be generalized to other metrics than the Euclidean distance $d(y,\\hat{y)) = \\|y - \\hat{y}\\|$.\n",
-    "\n"
+    "It can generally be concluded that SSE or MSE are the most convenient for optimization, while RMSE and MAE are most convenient for reporting results.  These can also be generalized to other metrics than the Euclidean distance \n",
+    "$ d(y,\\hat{y}) = \\|y - \\hat{y}\\|. $"
    ]
   },
   {
@@ -1116,21 +1124,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
