--- a/Control.ipynb
+++ b/Control.ipynb
@@ -26,7 +26,7 @@
     "state-space models, whereas linear control theory texts extensively use\n",
     "the frequency-domain notation induced by the Laplace transform.)\n",
     "\n",
-    "Control Philosophies\n",
+    "Control philosophies\n",
     "--------------------\n",
     "\n",
     "There are many techniques available for controlling a dynamic system.\n",
@@ -34,7 +34,7 @@
     "categorized along three axes: prescriptive/descriptive, model free/model\n",
     "based, and myoptic/predictive.\n",
     "\n",
-    "### Descriptive vs Prescriptive\n",
+    "### Descriptive vs prescriptive\n",
     "\n",
     "Descriptive approaches assume that a controller has been given, and the\n",
     "goal is to *analyze* whether the controlled system satisfies some\n",
@@ -50,7 +50,7 @@
     "guarantees on the synthesized controller will also suppose to be able to\n",
     "quantitatively describe the level of performance achieved.\n",
     "\n",
-    "### Model-Free vs Model-Based\n",
+    "### Model-free vs model-based\n",
     "\n",
     "Model-free controllers exhibit operate under no assumptions about the\n",
     "form of $f(x,u)$, besides perhaps general notions of the directions of\n",
@@ -82,7 +82,7 @@
     "trajectory of controls $u(t)$ and executes them without the use of state\n",
     "feedback.\n",
     "\n",
-    "### Myoptic vs Predictive\n",
+    "### Myoptic vs predictive\n",
     "\n",
     "Myoptic (aka greedy) methods reason about controls only looking at a\n",
     "single instant in time. At most, a myopic method will examine the\n",
@@ -99,8 +99,13 @@
     "*horizon*, which specifies the duration of time into the future for\n",
     "which predictions will be made. The choice of horizon induces a\n",
     "tradeoff, with longer horizons resulting in increased performance but\n",
-    "also greater computational expense.\n",
-    "\n",
+    "also greater computational expense."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "PID Control\n",
     "-----------\n",
     "\n",
@@ -237,7 +242,7 @@
     "\n",
     "Adding $u = u_P + u_I + u_D$ provides the PID controller.\n",
     "\n",
-    "### PID Gain Tuning\n",
+    "### PID gain tuning\n",
     "\n",
     "Step change\n",
     "\n",
@@ -245,7 +250,7 @@
     "\n",
     "Frequency response\n",
     "\n",
-    "### Stability Analysis\n",
+    "### Stability analysis\n",
     "\n",
     "Now we wish to perform stability analysis of a given controller in order\n",
     "to determine whether the system in the long run obeys stability (errors\n",
@@ -344,8 +349,7 @@
     "left as an exercise. The analysis for the PID case is a bit more\n",
     "complex, involving a third-order linear system. We shall see more\n",
     "general methods for solving these systems in\n",
-    "Sec. [1.4.1](#sec:LTIStability){reference-type=\"ref\"\n",
-    "reference=\"sec:LTIStability\"}.\n",
+    "Sec. [4.1](#sec:Stability-in-Linear-Time-Invariant-systems).\n",
     "\n",
     "### Summary\n",
     "\n",
@@ -409,7 +413,7 @@
     "controller to be counteracting errors at a past time, which may no\n",
     "longer exist in reality.\n",
     "\n",
-    "### Applying PID to Coupled Systems\n",
+    "### Applying PID to coupled systems\n",
     "\n",
     "An industrial robot can be considered as a $n$-D second order dynamical\n",
     "system with an $n$-D control, one for each joints. We can observe that\n",
@@ -452,7 +456,7 @@
     "    \n",
     "**********\n",
     "\n",
-    "Simulation Analysis\n",
+    "Simulation analysis\n",
     "-------------------\n",
     "\n",
     "Frequency response\n",
@@ -461,7 +465,7 @@
     "\n",
     "Monte-Carlo analysis\n",
     "\n",
-    "Analyzing Stability and Convergence\n",
+    "Analyzing stability and convergence\n",
     "-----------------------------------\n",
     "\n",
     "First we shall describe methods for analyzing the stability of a dynamic\n",
@@ -481,7 +485,7 @@
     "essentially equivalent to the original one, but has an equilibrium point\n",
     "at 0.\n",
     "\n",
-    "### Stability in Linear Time Invariant Systems\n",
+    "### Stability in Linear Time Invariant systems\n",
     "\n",
     "Recall that LTI systems are given by equations of the form\n",
     "$$\\dot{x} = Ax + Bu$$ where $A$ and $B$ are constant matrices of size\n",
@@ -647,7 +651,7 @@
     "$\\dot{x} = -x^2$ which has the analytical solution $x(t) = 1/(t+C)$.\n",
     "Obviously this converges to 0.\n",
     "\n",
-    "#### Lyapunov Stability\n",
+    "#### Lyapunov stability\n",
     "\n",
     "Lyapunov's method is the most commonly used method for directly studying\n",
     "the stability of nonlinear systems. The main difficulty of nonlinear\n",
@@ -805,21 +809,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
