--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -463,17 +463,26 @@
     "configuration, and rotates about the $y$ axis as well. The end effector\n",
     "is offset by a distance $L_3$ about the $x$ axis.\n",
     "\n",
-    "With this definition the end effector's world coordinates are:\n",
+    "With this definition the end effector's world coordinates are:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\n",
-    "\\V{x}(\\V{q}) =\n",
-    "R_z(q_1) R_y(q_2)\n",
-    "\\begin{bmatrix} L_2 + c_3 L_3 \\\\ 0 \\\\ -s_3 L_3 \\end{bmatrix} = $$\n",
-    "\n",
-    "$$R_z(q_1) \\begin{bmatrix}c_2 (L_2 + c_3 L_3) - s_2 s_3 L_3 \\\\ 0 \\\\ -s_2 (L_2 + c_3 L_3) - c_2 s_3 L_3 \\end{bmatrix} \n",
-    "= $$\n",
-    "\n",
-    "$$ \\begin{bmatrix} c_1 (c_2 (L_2 + c_3 L_3) - s_2 s_3 L_3) \\\\ s_1 (c_2 (L_2 + c_3 L_3) - s_2 s_3 L_3) \\\\ L_1 - s_2 (L_2 + c_3 L_3) - c_2 s_3 L_3 \\end{bmatrix}.$$\n",
-    "\n",
+    "\\begin{aligned}\n",
+    "\\V{x}(\\V{q}) = & R_z(q_1) R_y(q_2) \\begin{bmatrix} L_2 + c_3 L_3 \\\\ 0 \\\\ -s_3 L_3 \\end{bmatrix}   \\\\\n",
+    "= &R_z(q_1) \\begin{bmatrix}c_2 (L_2 + c_3 L_3) - s_2 s_3 L_3 \\\\ 0 \\\\ -s_2 (L_2 + c_3 L_3) - c_2 s_3 L_3 \\end{bmatrix} \n",
+    "\\\\\n",
+    "= & \\begin{bmatrix} c_1 (c_2 (L_2 + c_3 L_3) - s_2 s_3 L_3) \\\\ s_1 (c_2 (L_2 + c_3 L_3) - s_2 s_3 L_3) \\\\ L_1 - s_2 (L_2 + c_3 L_3) - c_2 s_3 L_3 \\end{bmatrix}. \\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We wish to match this to the target\n",
     "$\\V{x}_D = (x_D,y_D,z_D)$.\n",
     "\n",
@@ -518,8 +527,22 @@
     "### 2RP spherical manipulator\n",
     "\n",
     "For the 2RP robot [described in\n",
-    "the last chapter](Kinematics.ipynb#Examples) we obtained the end effector point\n",
-    "$$\\V{x}(\\V{q}) = \\begin{bmatrix} c_1 c_2 q_3 \\\\ s_1 c_2 q_3 \\\\ -s_2 q_3 \\end{bmatrix}.$$\n",
+    "the last chapter](Kinematics.ipynb#Examples) we obtained the end effector point"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\V{x}(\\V{q}) = \\begin{bmatrix} c_1 c_2 q_3 \\\\ s_1 c_2 q_3 \\\\ -s_2 q_3 \\end{bmatrix}.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To match a target point $\\V{x}_D = (x_D,y_D,z_D)$ we can observe that\n",
     "the norm $\\| \\V{x}(\\V{q}) \\|$ is simply $|q_3|$. It is very likely that\n",
     "only positive values of $q_3$ are valid joint values, and if so we can\n",
@@ -553,7 +576,14 @@
     "\n",
     "Since the only degrees of freedom that affect orientation are $q_4$,\n",
     "$q_5$, and $q_6$, we can solve for the ZYZ euler angles to achieve\n",
-    "$R_D$. First, let us derive the forward kinematics: $$\\begin{aligned}\n",
+    "$R_D$. First, let us derive the forward kinematics: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{aligned}\n",
     "R(q_4,q_5,q_6) &= R_z(q_4)R_y(q_5)R_z(q_6) \\\\\n",
     " & = \\left[\\begin{array}{ccc}\n",
     "   c_4 & -s_4 & 0\\\\\n",
@@ -587,7 +617,14 @@
     "   -s_5 c_6 & s_5 s_6 & c_5\n",
     "   \\end{array} \\right].\n",
     "\\end{aligned}\n",
-    "\\label{eq:ZYZEulerAngles}$$ Let us denote\n",
+    "\\label{eq:ZYZEulerAngles}$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us denote\n",
     "$$R_D = \\left[\\begin{array}{ccc}\n",
     "r_{11} & r_{12} & r_{13} \\\\\n",
     "r_{21} & r_{22} & r_{23} \\\\\n",
@@ -922,15 +959,33 @@
     "\n",
     "The Jacobian of an arbitrary vector function $\\V{x} = f(\\V{q})$, with\n",
     "$f: \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$ is given as the following\n",
-    "matrix of *partial derivatives*:\n",
+    "matrix of *partial derivatives*:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$J(\\V{q}) \\equiv \\frac{\\partial f(\\V{q})}{\\partial \\V{x}} \\equiv \\begin{bmatrix}\n",
     "\\frac{\\partial f_1(\\V{q})}{\\partial q_1} & \\cdots & \\frac{\\partial f_1(\\V{q})}{\\partial q_n} \\\\\n",
     "\\vdots & \\ddots & \\vdots \\\\\n",
     "\\frac{\\partial f_m(\\V{q})}{\\partial q_1} & \\cdots & \\frac{\\partial f_m(\\V{q})}{\\partial q_n} \n",
-    "\\end{bmatrix}$$\n",
-    "where $f$'s component functions are given by the\n",
-    "individual $f_i$'s:\n",
-    "$$f(\\V{q}) \\equiv \\begin{bmatrix} f_1(\\V{q}) \\\\ \\vdots \\\\ f_m(\\V{q}) \\end{bmatrix}.$$\n",
+    "\\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $f$'s component functions are given by the individual $f_i$'s:\n",
+    "\n",
+    "$$f(\\V{q}) \\equiv \\begin{bmatrix} f_1(\\V{q}) \\\\ \\vdots \\\\ f_m(\\V{q}) \\end{bmatrix}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Observe that each of the rows of the Jacobian correspond to each of the\n",
     "component functions, and each column corresponds to derivatives of a\n",
     "single joint coordinate. It is also important to note that the Jacobian\n",
@@ -941,11 +996,15 @@
     "As an example, let us consider a single joint planar robot with its\n",
     "joint at the origin, and an end effector at $L_1$ distance away from the\n",
     "origin. The world coordinates of the end effector are:\n",
-    "$$\\V{x}(\\V{q}) = \\begin{bmatrix}{L_1 \\cos q_1} \\\\ {L_1 \\sin q_1} \\end{bmatrix}.$$ The Jacobian\n",
+    "$$\\V{x}(\\V{q}) = \\begin{bmatrix}{L_1 \\cos q_1} \\\\ {L_1 \\sin q_1} \\end{bmatrix}.$$ \n",
+    "\n",
+    "The Jacobian\n",
     "of this point is a $2\\times 1$ matrix obtained by taking the derivative\n",
     "with respect to each of the joint coordinates, which is just $q_1$ in\n",
     "this case.\n",
     "$$J(\\V{q}) \\equiv \\frac{\\partial \\V{x}}{\\partial \\V{q}}(\\V{q}) = \\begin{bmatrix}{\\partial (L_1 \\cos q_1) / \\partial q_1} \\\\ {\\partial (L_1 \\sin q_1) / \\partial q_1} \\end{bmatrix} = \\begin{bmatrix}{-L_1 \\sin q_1} \\\\ {L_1 \\cos q_1} \\end{bmatrix}.$$\n",
+    "\n",
+    "\n",
     "Note that this is perpendicular to the direction from the joint to the\n",
     "end effector, with the same magnitude.\n",
     "\n",
@@ -983,7 +1042,13 @@
     "$$\\dot{q}_2 \\frac{\\partial \\V{x}}{\\partial q_2}(\\V{q}).$$ If both were\n",
     "to rotate simultaneously, then the velocity would be\n",
     "$$\\dot{\\V{x}}(\\V{q}) = \\dot{q}_1 \\frac{\\partial \\V{x}}{\\partial q_1}(\\V{q}) + \\dot{q}_2 \\frac{\\partial \\V{x}}{\\partial q_2}(\\V{q}) = J(\\V{q})\\dot{\\V{q}}.$$\n",
-    "[Fig. 6](#fig:Jacobian2R) illustrates this concept.\n",
+    "[Fig. 6](#fig:Jacobian2R) illustrates this concept.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "************\n",
     "\n",
@@ -1087,7 +1152,13 @@
     "Since this matrix wipes out the $x$ and $y$ coordinates of whatever\n",
     "homogeneous point it multiplies and replaces it with $(a_x,a_y,0)$, we\n",
     "can express the Jacobian column with the simplified expression\n",
-    "$$\\frac{\\partial f}{\\partial q_j}(\\V{q}) = T_j(\\V{q}) \\begin{bmatrix}a_{j,x} \\\\ a_{j,y} \\\\ 0\\end{bmatrix}.$$\n",
+    "$$\\frac{\\partial f}{\\partial q_j}(\\V{q}) = T_j(\\V{q}) \\begin{bmatrix}a_{j,x} \\\\ a_{j,y} \\\\ 0\\end{bmatrix}.$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Note that since the homogeneous coordinate is 0, the translation of the\n",
     "transform $T_j$ does not affect the result, and hence the Jacobian\n",
     "column is simply the world direction of the joint axis $\\V{a}_j$.\n",
