--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -327,7 +327,13 @@
     "\n",
     "First, observe that relative to $l_1$'s reference frame, $X$ has coordinates $R(q_1)\\V{x}_1$ because the link was rotated about the origin:\n",
     "$$\\V{x}_1^{ref} = R(q_{1}) \\V{x}_{1} = \\begin{bmatrix} {\\cos q_1} & {-\\sin q_1} & {0} \\\\ {\\sin q_1} & {\\cos q_1} & {0} \\\\ 0 & 0 & 1 \n",
-    "\\end{bmatrix}.$$\n",
+    "\\end{bmatrix}.$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "Next, we can convert coordinates in $l_1$'s\n",
     "reference frame to the world via multiplication by $T_1^{ref}$ to obtain\n",
@@ -393,6 +399,7 @@
     "the $x$ axis.\n",
     "\n",
     "With this convention, we have the reference transforms given by:\n",
+    "\n",
     "$$T_{i\\rightarrow i-1}^{ref} = \\begin{bmatrix}\n",
     "1 & 0 & L_{i-1} \\\\\n",
     "0 & 1 & 0 \\\\\n",
@@ -400,6 +407,7 @@
     "\\end{bmatrix}$$\n",
     "\n",
     "Hence, we derive the first link's transform:\n",
+    "\n",
     "$$T_1(q_1) = \\begin{bmatrix} 1 & 0 & L_0  \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix} \\begin{bmatrix} \\cos q_1 & -\\sin q_1 & 0 \\\\ \\sin q_1 & \\cos q_1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix} \\begin{bmatrix} \\cos q_1 & -\\sin q_1 & L_0 \\\\ \\sin q_1 & \\cos q_1 & 0 \\\\ 0 & 0 & 1 \\end{bmatrix}$$\n",
     "\n",
     "Then, the second link's transform are given by:\n",
@@ -428,6 +436,7 @@
     "s_{12} & c_{12} & s_1 L_1 \\\\\n",
     "0 & 0 & 1 \n",
     "\\end{bmatrix}$$\n",
+    "\n",
     "where the shorthand $c_i = \\cos q_i$, $s_i = \\sin q_i$,\n",
     "and $c_{12} = \\cos (q_1 + q_2)$, $s_{12} = \\sin (q_1 + q_2)$ is used,\n",
     "and some trigonometric operations were used to simplify the final\n",
@@ -436,8 +445,13 @@
     "If this were a 2R manipulator, and we wished to derive the coordinates\n",
     "of the end effector point, we simply apply this transform to the point\n",
     "$(L_2, 0, 1)$ to obtain:\n",
-    "$$T_2(q_1,q_2) \\begin{bmatrix}L_2 \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} L_0 + c_1 L_1 + c_{12} L_2 \\\\ s_1 L_1 + s_{12}L_2 \\\\ 1 \\end{bmatrix}$$\n",
-    "\n",
+    "$$T_2(q_1,q_2) \\begin{bmatrix}L_2 \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix} L_0 + c_1 L_1 + c_{12} L_2 \\\\ s_1 L_1 + s_{12}L_2 \\\\ 1 \\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This notation is shown below in [Fig. 2](#fig:planar2RNotation)\n",
     "\n",
     "*************\n",
@@ -454,13 +468,19 @@
     "$c_{1,...,k} = \\cos(\\sum_{i=1}^k q_i)$ and\n",
     "$s_{1,...,k} = \\sin(\\sum_{i=1}^k q_i)$, we have the world coordinates of\n",
     "the end effector point given by:\n",
-    "$$T_n(\\V{q})\\begin{bmatrix}L_n \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix}L_0 \\\\ 0 \\\\ 1 \\end{bmatrix} + \\sum_{i=1}^n \\begin{bmatrix}L_i c_{1,\\ldots,i} \\\\ L_i s_{1,\\ldots,i} \\\\ 0 \\end{bmatrix}.$$\n",
-    "\n",
+    "$$T_n(\\V{q})\\begin{bmatrix}L_n \\\\ 0 \\\\ 1 \\end{bmatrix} = \\begin{bmatrix}L_0 \\\\ 0 \\\\ 1 \\end{bmatrix} + \\sum_{i=1}^n \\begin{bmatrix}L_i c_{1,\\ldots,i} \\\\ L_i s_{1,\\ldots,i} \\\\ 0 \\end{bmatrix}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2D forward kinematics for branched revolute robots\n",
     "\n",
     "Branched robots can be handled by a similar formula, except additional\n",
     "bookkeeping is necessary to represent the robot's structure. We order\n",
-    "the parent and child of each joint with the convention that each link is\n",
+    "the parent and child of each joint with the convention that ea\n",
+    "ch link is\n",
     "the child of exactly one joint, and hence has only one parent. The\n",
     "parent of link $i$ is denoted $p[i]$, with the base link attached by a\n",
     "joint to the world, denoted by $p[i] = W$.\n",
@@ -486,8 +506,13 @@
     "1 & 0 & a_{i,x} q_i \\\\\n",
     "0 & 1 & a_{i,y} q_i \\\\\n",
     "0 & 0 & 1\n",
-    "\\end{bmatrix}.$$\n",
-    "\n",
+    "\\end{bmatrix}.$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "For example, we derive the transform of the second link of an RP\n",
     "manipulator, whose prismatic axis moves along the $x$ axis, as follows:\n",
     "$$ T_2(q_1,q_2) = T_1(q_1) \\begin{bmatrix} 1 & 0 & L_1 \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1  \\end{bmatrix} \\begin{bmatrix}\n",
@@ -511,8 +536,13 @@
     "c_1 & -s_1 & L_0 + c_1(L_1 + q_2) \\\\\n",
     "s_1 & c_1 & s_1(L_1 + q_2) \\\\\n",
     "0 & 0 & 1 \n",
-    "\\end{bmatrix}$$\n",
-    "\n",
+    "\\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To represent this compactly, we slightly modify\n",
     "($\\ref{eq:RecursiveForwardKinematicsBranched}$). Let us define for\n",
     "$i=1,\\ldots,n$, the following kinematic parameters:\n",
@@ -1263,7 +1293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
