--- a/OptimalControl.ipynb
+++ b/OptimalControl.ipynb
@@ -238,12 +238,22 @@
     "$$\\begin{split}\n",
     "\\dot{x}^\\star &= A x^\\star + \\frac{1}{2} B R^{-1} B^T \\lambda^\\star \\\\\n",
     "\\dot{\\lambda}^\\star &= - 2 Qx^\\star  -A^T \\lambda^\\star\n",
-    "\\end{split}$$ Hypothesizing that $\\lambda^\\star = 2 P x^\\star$ and\n",
+    "\\end{split}$$ \n",
+    "\n",
+    "Hypothesizing that $\\lambda^\\star = 2 P x^\\star$ and\n",
     "multiplying the first equation by $P$, we obtain the system of equations\n",
+    "\n",
     "$$\\begin{split}\n",
     "P\\dot{x}^\\star &=  (PA + P B R^{-1} B^T P )x^\\star \\\\\n",
-    "2P\\dot{x}^\\star &= (-2Q  -2A^T P)x^\\star\n",
-    "\\end{split}$$ After dividing the second equation by 2 and equating the\n",
+    "2P\\dot{x}^\\star &= (-2Q  -2A^T P)x^\\star.\n",
+    "\\end{split}$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After dividing the second equation by 2 and equating the\n",
     "left hand sides, we have an equation that must be satisfied for all $x$.\n",
     "Since the equation must hold for all $x$, the matrices must also be\n",
     "equal, which produces the Riccati equations.\n",
@@ -276,7 +286,14 @@
     "\\dot{x} &= v \\cos \\theta \\\\\n",
     "\\dot{y} &= v \\sin \\theta \\\\\n",
     "\\dot{\\theta} &= v/L \\tan \\phi .\n",
-    "\\end{split}$$ Here $(x,y)$ are the coordinates of a point in the middle\n",
+    "\\end{split}$$ \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here $(x,y)$ are the coordinates of a point in the middle\n",
     "of the rear axis, and $L$ is the length between the rear and front axle.\n",
     "The velocity and steering angle are bounded, $v \\in [-1,1]$ and\n",
     "$\\phi \\in [-\\phi_{max},\\phi_{max}]$, and the cost only measures time to\n",
@@ -747,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
