Removing some problematic equation rendering

--- a/3DRotations.ipynb
+++ b/3DRotations.ipynb
@@ -146,11 +146,25 @@
     "solutions in SO(2) and SO(3).\n",
     "\n",
     "We define the signed angular distance between two angles $\\theta_1$ and\n",
-    "$\\theta_2$ represented in the range $[0,2\\pi)$ as the function:\n",
-    "$$diff(\\theta_2,\\theta_1) = \\left\\lbrace \\begin{array}{ll} \\theta_2 - \\theta_1  & \\text{if } -\\pi < \\theta_2 - \\theta_1 \\leq \\pi \\\\\n",
+    "$\\theta_2$ represented in the range $[0,2\\pi)$ as the function:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "diff(\\theta_2,\\theta_1) = \\left\\lbrace \\begin{array}{ll} \\theta_2 - \\theta_1  & \\text{if } -\\pi < \\theta_2 - \\theta_1 \\leq \\pi \\\\\n",
     "\\theta_2 - \\theta_1 - 2\\pi & \\text{if } \\theta_2 - \\theta_1 > \\pi \\\\\n",
     "\\theta_2 - \\theta_1 + 2\\pi & \\text{if } \\theta_2 - \\theta_1 \\leq -\\pi\n",
-    "\\end{array} \\right.$$\n",
+    "\\end{array} \\right.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "which results in a value in the range $(-\\pi,\\pi]$\n",
     "that produces the angular displacement of $\\theta_2$ from $\\theta_1$\n",
     "with minimum absolute value, and whose value is positive for CCW\n",
@@ -528,7 +542,10 @@
     "\n",
     "First, for the given convention we would begin by equating the matrix\n",
     "terms to the sine and cosine terms of the computed rotation matrix,\n",
-    "e.g., for roll-pitch-yaw convention: $$R_{rpy} =  \\begin{bmatrix}\n",
+    "e.g., for roll-pitch-yaw convention:\n",
+    "\n",
+    "$$\n",
+    "R_{rpy} =  \\begin{bmatrix}\n",
     "r_{11} & r_{12} & r_{13} \\\\\n",
     "r_{21} & r_{22} & r_{23} \\\\\n",
     "r_{31} & r_{32} & r_{33} \n",
@@ -536,7 +553,10 @@
     "c_1 c_2  & c_1 s_2 s_3 - s_1 c_3 & s_1 s_3 + c_1 s_2 c_3 \\\\\n",
     "s_1 c_2  & c_1 c_3 + s_1 s_2 s_3 &  s_1 s_2 c_3 - c_1 s_3 \\\\\n",
     "- s_2    & c_2 s_3               & c_2 c_3  \n",
-    "\\end{bmatrix}$$ where we use the shorthand $c_1 = \\cos \\phi$,\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "where we use the shorthand $c_1 = \\cos \\phi$,\n",
     "$c_2 = \\sin \\phi$, $c_2 = \\cos \\theta$, $s_2 = \\sin \\theta$,\n",
     "$c_3 = \\cos \\psi$, and $s_3 = \\sin \\psi$.\n",
     "\n",
