--- a/Control.ipynb
+++ b/Control.ipynb
@@ -507,12 +507,17 @@
     "second-order single-input single-output system\n",
     "$\\ddot{x} = ax+b\\dot{x}+cu$ we build an equivalent 1-input 3-output\n",
     "system $y = (I,x,\\dot{x})$ such that\n",
-    "$$\\dot{y} = \\begin{bmatrix}x\\\\ \\dot{x}\\\\ \\ddot{x} \\end{bmatrix} =\n",
+    "\n",
+    "$$\n",
+    "\\dot{y} = \\begin{bmatrix}x\\\\ \\dot{x}\\\\ \\ddot{x} \\end{bmatrix} =\n",
     "\\begin{bmatrix}\n",
     "0 & 1 & 0 \\\\\n",
     "0 & 0 & 1 \\\\\n",
     "0 & a & b\n",
-    "\\end{bmatrix} y + \\begin{bmatrix}0\\\\0\\\\c\\end{bmatrix} u$$ Then, we can define a\n",
+    "\\end{bmatrix} y + \\begin{bmatrix}0\\\\0\\\\c\\end{bmatrix} u\n",
+    "$$\n",
+    "\n",
+    "Then, we can define a\n",
     "the 3$\\times$1 matrix $K$ as\n",
     "$$K=\\begin{bmatrix}k_I & k_P & k_D\\end{bmatrix}$$ so that\n",
     "$u=-Kx$ is the PID control.\n",
