--- a/CoordinateTransformations.ipynb
+++ b/CoordinateTransformations.ipynb
@@ -87,8 +87,23 @@
     "A 2D position $P$ is represented by a 2-element vector $\\V{p}=(p_x,p_y)$\n",
     "that gives its coordinates relative to axis directions $X$ and $Y$,\n",
     "offset from a position $O$ where the axes cross, called the origin ([Fig. 1](#fig:Coordinates2D)). We\n",
-    "will also represent vectors in column vector form:\n",
-    "$$\\V{p} = \\begin{bmatrix}p_x \\\\ p_y \\end{bmatrix}$$\n",
+    "will also represent vectors in column vector form:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\V{p} = \\begin{bmatrix}p_x \\\\\n",
+    "p_y \\end{bmatrix}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "for use in matrix-vector products. Both\n",
     "parenthetical and column vector notations are equivalent and\n",
     "interchangeable.\n",
@@ -1091,7 +1106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
