--- a/InverseKinematics.ipynb
+++ b/InverseKinematics.ipynb
@@ -86,7 +86,7 @@
    "execution_count": 1,
    "metadata": {
     "code_folding": [
-     0
+     1
     ]
    },
    "outputs": [
@@ -157,11 +157,28 @@
     "could generalize to also include orientation of the final link through a\n",
     "different choice of $f$. To define a combination of position and\n",
     "orientation goal, we would append some rotation parameterization like\n",
-    "Euler angles to $\\V{x}$, and define the forward kinematic map:\n",
-    "$$\\V{x} \\equiv\n",
-    "\\left[\\begin{array}{c} \\V{x}_p \\\\ \\V{x}_o \\end{array}\\right] \n",
-    " = f(\\V{q}) \\equiv\n",
-    " \\left[\\begin{array}{c} T_N(\\V{q})\\V{x}_N \\\\ R_{ea}^{-1}(R_N(\\V{q})) \\end{array}\\right]$$\n",
+    "Euler angles to $\\V{x}$, and define the forward kinematic map:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\V{x} \\equiv \\begin{bmatrix}\n",
+    "  \\V{x}_p \\\\\n",
+    "  \\V{x}_o\n",
+    "\\end{bmatrix}=f(\\V{q}) \\equiv\n",
+    " \\begin{bmatrix}\n",
+    "   T_N(\\V{q})\\V{x}_N \\\\\n",
+    "   R_{ea}^{-1}(R_N(\\V{q}))\n",
+    " \\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "where $R_N(\\V{q})$ is the 3x3 rotation matrix of the $N$'th link, and\n",
     "$R_{ea}^{-1}(R)$ computes the euler angle representation of the rotation\n",
     "matrix $R$ (according to some chosen convention). Here $\\V{x}_p$ is the\n",
@@ -2417,6 +2434,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Edit Metadata",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
