--- a/Kinematics.ipynb
+++ b/Kinematics.ipynb
@@ -640,24 +640,42 @@
     "  &   &   & 0 \\\\\n",
     "\\hline\n",
     "0 & 0 & 0 & 1\n",
-    "\\end{array}\\right]$$ The first two matrix multiplications compute the\n",
-    "homogeneous representation of $$R_z(q_1) R_y(q_2)\n",
-    "= \\left[\\begin{array}{ccc}\n",
-    "c_1 & -s_1 & 0 \\\\\n",
-    "s_1 &  c_1 & 0 \\\\\n",
-    "0   &   0  & 1\n",
-    "\\end{array}\\right]\n",
-    "\\left[\\begin{array}{ccc}\n",
-    "c_2  & 0 & s_2 \\\\\n",
-    "0    & 1 & 0   \\\\\n",
-    "-s_2 & 0 & c_2\n",
-    "\\end{array}\\right]\n",
-    "= \n",
-    "\\left[\\begin{array}{ccc}\n",
-    "c_1 c_2  & -s_1 & c_1 s_2 \\\\\n",
-    "s_1 c_2  & c_1  & s_1 s_2  \\\\\n",
-    "-s_2     & 0    & c_2\n",
-    "\\end{array}\\right].$$ Hence, the final result is $$T_3(q) = \n",
+    "\\end{array}\\right]$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first two matrix multiplications compute the\n",
+    "homogeneous representation of \n",
+    "$$\n",
+    " R_z(q_1) R_y(q_2)\n",
+    " = \\left[\\begin{array}{ccc}\n",
+    " c_1 & -s_1 & 0 \\\\\n",
+    " s_1 &  c_1 & 0 \\\\\n",
+    " 0   &   0  & 1\n",
+    " \\end{array}\\right]\n",
+    " \\left[\\begin{array}{ccc}\n",
+    " c_2  & 0 & s_2 \\\\\n",
+    " 0    & 1 & 0   \\\\\n",
+    " -s_2 & 0 & c_2\n",
+    " \\end{array}\\right] = \n",
+    " \\left[\\begin{array}{ccc}\n",
+    " c_1 c_2  & -s_1 & c_1 s_2 \\\\\n",
+    " s_1 c_2  & c_1  & s_1 s_2  \\\\\n",
+    " -s_2     & 0    & c_2\n",
+    " \\end{array}\\right].\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hence, the final result is\n",
+    "\n",
+    "$$T_3(q) = \n",
     "\\left[\\begin{array}{ccc|c}\n",
     "  &                  &   &   \\\\\n",
     "  & R_z(q_1)R_y(q_2) &   & R_z(q_1)R_y(q_2)\\V{e}_1 q_3 \\\\\n",
