--- a/Optimization.ipynb
+++ b/Optimization.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unconstrained Optimization\n",
+    "Unconstrained optimization\n",
     "--------------------------\n",
     "\n",
     "Finding the optimal (minimum or maximum) value of a real-valued function\n",
@@ -32,7 +32,7 @@
     "$[a,b]$, is known as *constrained optimization*, and will be covered in\n",
     "the next section.\n",
     "\n",
-    "### Mathematical Notation and Analysis\n",
+    "### Mathematical notation and analysis\n",
     "\n",
     "In some cases, it may be possible to examine the function by hand and\n",
     "use mathematical tools to find a closed-form expression of the minimum.\n",
@@ -40,12 +40,12 @@
     "can be evaluated quickly on a computer or can be used in further\n",
     "mathematical transformations.\n",
     "\n",
-    "#### Existence and Necessary Conditions of a Minimum\n",
+    "#### Existence and necessary conditions of a minimum\n",
     "The minimum of $f$ over a domain $S$ is a value $m$ such that $m=f(c)$\n",
     "for some value $c \\in S$ and that $m \\leq f(x)$. If such a value exists,\n",
     "we write: $$m = \\min_{x \\in S} f(x)$$\n",
     "\n",
-    "#### Argument of the Minimum\n",
+    "#### Argument of the minimum\n",
     "We may also be interested in obtaining the x-values $c$ that attains\n",
     "this minimum. This is known as an *argument of the minimum* (or arg min)\n",
     "$$c = \\arg\\min_{x \\in S} f(x).$$ Since a function may attain its minimum\n",
@@ -53,7 +53,7 @@
     "may also be an empty set if the minimum is not defined, e.g.\n",
     "$\\arg \\min_{x \\in \\mathbb{R}} x$.\n",
     "\n",
-    "#### Local Minima and Critical Points\n",
+    "#### Local minima and critical points\n",
     "A value $x$ for which $f$ obtains its maximum over some open interval\n",
     "containing $x$ is known as a *local minimum* (or maximum) of $f$. If $f$\n",
     "is differentiable, then one condition for local optimality is that the\n",
@@ -285,7 +285,7 @@
     "steepest descent. These sweeps continue until convergence or a\n",
     "termination condition is reached.\n",
     "\n",
-    "### Random Restarts\n",
+    "### Random restarts\n",
     "\n",
     "Local optimization techniques are not guaranteed to find the global\n",
     "minimum unless it can be proven that the function under question has\n",
@@ -309,10 +309,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Constrained Optimization\n",
+    "Constrained optimization\n",
     "------------------------\n",
     "\n",
-    "### Analytical methods\n",
+    "In the general constrained optimization (minimization) problem, we have a statement of the form\n",
+    "\n",
+    "$$\\begin{gathered}\n",
+    "min_x f(x) \\text{ such that} \\\\\n",
+    "g(x) \\geq 0 \\\\\n",
+    "h(x) = 0.\n",
+    "\\end{gathered}$$\n",
+    "\n",
+    "Here, all elements except for $f$ are in general vector-valued: $x \\in \\mathbb{R}^n$, $g: \\mathbb{R}^n \\rightarrow \\mathbb{R}^m$, and $h: \\mathbb{R}^n \\rightarrow \\mathbb{R}^p$.\n",
+    "Analysis and methods for solving these types of problems are considerably more complex than unconstrained optimization techniques.  So, it is very convenient to use software toolboxes that allow constrained problems to be solved as a \"black box\", where the user needs only a minimum of understanding of the underlying methods in order to obtain satisfactory results.  That said, algorithmic breakthroughs are often made by understanding constrained optimization more deeply (e.g., support vector machines in machine learning, time scaling methods in robot trajectory optimization).\n",
+    "\n",
+    "### Analysis\n",
+    "\n",
+    "#### Optimization on an interval\n",
     "\n",
     "> **Extreme Value Theorem**. The Extreme Value Theorem states that a continuous function $f$ does\n",
     "> indeed attain a minimum and maximum over a closed interval $[a,b]$ at\n",
@@ -323,9 +336,103 @@
     "minimum and maximum cannot be attained over an interval that is not\n",
     "closed, or not bounded, or when the function is discontinuous.\n",
     "\n",
+    "In the case where the minimum $c$ is in the interior of the interval $(a,b)$, and the derivative of $f$ exists, then $c$ is a critical point, i.e., $f^\\prime(c)=0$. If it is not in the interior, then either $c=a$ or $c=b$.  This gives rise to an \"algorithm\" for finding the minimum on an interval:\n",
+    "\n",
+    "1. Determine all critical points of $f$ in the open interval $(a,b)$.  Let these be called $x_1,\\ldots,x_k$.\n",
+    "2. Return $min f(a), f(b), f(x_1), \\ldots, f(x_k)$.\n",
+    "\n",
+    "#### Lagrange multipliers\n",
+    "\n",
+    "Let us now consider the multi-dimensional constrained optimization case with only equality constraints, i.e., $min_x f(x)$ such that $h(x)=0$.  The minimum may not be a critical point of $f$, because most critical points are very unlikely to satisfy $h(x)=0$.  If we are to consider the set of points (a manifold) that satisfies $h(x)=0$, the conditions for optimality state that we cannot move *along this manifold* without reducing the value of $f(x)$.  This is made more precisely with the condition of *Lagrange multipliers*.\n",
+    "\n",
+    "More precisely, the Lagrange multipliers give us a way to define a critical point in an equality-constrained setting, which is a necessary condition for a point to be optimal. Specifically, we define a vector of Lagrange multipliers $\\lambda \\in \\mathbb{R}^p$.  The condition states if $x^\\star$ is a minimizer of the equality-constrained optimization, then there exists some $\\lambda^\\star$ satisfying:\n",
+    "\n",
+    "$$\\nabla f(x^\\star) + \\lambda^{\\star T} \\nabla h(x^\\star) = 0 $$\n",
+    "\n",
+    "This, along with the condition $h(x^\\star) == 0$, gives a way to characterize all critical points on the manifold.\n",
+    "\n",
+    "It is clearer to understand what this means in the case of a single constraint $p=1$.  Then $\\lambda$ is a scalar, and $\\nabla h(x^\\star)$ is a gradient vector perpendicular to the surface $h(x)=0$ at $x^\\star$.  The Lagrange condition becomes\n",
+    "\n",
+    "$$\\nabla f(x^\\star) + \\lambda^\\star \\nabla h(x^\\star) = 0.$$\n",
+    "\n",
+    "Because $\\lambda^\\star$ can be arbitrary, this means that at $x^\\star$, $\\nabla f$ and $\\nabla h$ are _aligned_,  Moreover, $\\nabla f \\neq 0$.  It does not matter how the gradients are scaled with respect to one another, since $\\lambda^\\star$ can vary freely.  In other words, the direction in which $x$ is \"pulled\" by the gradient of $f$ is canceled out because it cannot move along the surface $h(x)=0$.\n",
+    "\n",
+    "The multiple-constraint case is simply an analogue of this, to account for the multiple constraint gradient directions being able to combine, in arbitrary linear combinations, to cancel out the \"pull\" of $\\nabla f$.\n",
+    "\n",
+    "\n",
+    "#### KKT conditions\n",
+    "\n",
+    "For problems with both inequality and equality constraints, the Lagrange multiplier conditions can be extended to form the Karush-Kuhn-Tucker (KKT) conditions.  Let us first consider the case where only inequality constraints are present.  The set of $x$ satisfying $g(x) \\leq 0$ is called the *feasible* set, and we wish to characterize the minimum of $f$ and the minimizing point $x^\\star$ over this set. \n",
+    "\n",
+    "The KKT conditions are in some sense an analogue of the Extreme Value Theorem, and state that an optimum must be either a critical point in the interior of the feasible set, or it must be on the boundary of the feasible region.  Now, if we knew on which boundary of the feasible region it lies, then the Lagrange multiplier conditions become \"active\" along that boundary and determine the set of critical points. \n",
+    "\n",
+    "Let us again examine the case where $g(x)$ is a single scalar, i.e., $m=1$. There are two options for $x$ to be a critical point. Either:\n",
+    "1. $\\nabla f(x) = 0$ in an interior point ($g(x) > 0$), or\n",
+    "2. $x$ is a boundary point ($g(x) = 0$), in which case the Lagrange multiplier conditions $\\nabla f(x) + \\mu \\nabla g(x) = 0$ for some $\\mu$. \n",
+    "Note that we are using a different symbol for the Lagrange multiplier.  If we want the point to be a minimizer, we also require that $\\mu > 0$ needs to hold (otherwise, $f$ can be reduced by moving toward the interior of the feasible set).\n",
+    "\n",
+    "This set of options could be analyzed one-by-one to characterize all critical points.  But as we add more dimensions to $g$, the options become unwieldy. Consider the $m=2$ case, $g(x) = [g_1(x),g_2(x)]$.  Either\n",
+    "1. $\\nabla f(x) = 0$ in an interior point ($g_1(x) > 0$ and $g_2(x) > 0$), or\n",
+    "2. $x$ is a boundary point of $g_1$ but interior to $g_2$ ($g_1(x) = 0$, $g_2(x) > 0$), in which case the Lagrange multiplier conditions $\\nabla f(x) + \\mu_1 \\nabla g_1(x) = 0$ hold for some $\\mu_1$.\n",
+    "3. $x$ is a boundary point of $g_2$ but interior to $g_1$ ($g_2(x) = 0$, $g_1(x) > 0$), in which case the Lagrange multiplier conditions $\\nabla f(x) + \\mu_2 \\nabla g_2(x) = 0$ hold for some $\\mu_2$.\n",
+    "4. $x$ is a boundary point of both $g_1$ and $g_2$ ($g_1(x) = 0$, $g_2(x) = 0$), in which case the Lagrange multiplier conditions $\\nabla f(x) + \\mu_1 \\nabla g_1(x) + \\mu_2 \\nabla g_2(x) = 0$ hold for some $\\mu_1, \\mu_2$.\n",
+    "\n",
+    "In general, for $m$ constraints there are $2^m$ possible combinations of conditions.  To compress this into a more digestible form, the KKT conditions write the conditions as follows:\n",
+    "\n",
+    "$$\\begin{gathered}\n",
+    "\\nabla f(x) + \\mu^T \\nabla g(x) = 0 \\\\\n",
+    "g(x) \\geq 0 \\\\\n",
+    "\\mu \\geq 0 \\\\\n",
+    "\\mu^T g(x) = 0\n",
+    "\\end{gathered}$$\n",
+    "\n",
+    "The fourth condition is known as the *complementarity* condition, which means that if $g_i(x) > 0$, this forces $\\mu_i = 0$.  Conversely, if $\\mu_i > 0$, then this forces $g_i(x) = 0$.  In other words, the multiplier can only be active when the constraint is met exactly. \n",
+    "\n",
+    "To complete the picture, we write the full KKT conditions for both inequality and equality constraints.\n",
+    "\n",
+    "$$\n",
+    "\\begin{gathered}\n",
+    "\\nabla f(x) + \\mu^T \\nabla g(x) + \\lambda^T \\nabla h(x)= 0 \\\\\n",
+    "g(x) \\geq 0 \\\\\n",
+    "h(x) = 0 \\\\\n",
+    "\\mu \\geq 0 \\\\\n",
+    "\\mu^T g(x) = 0.\\end{gathered}\n",
+    "$$\n",
+    "\n",
+    "\n",
     "### Linear and quadratic programming\n",
     "\n",
-    "### Sequential quadratic programming\n"
+    "In linear programming (LP), we are interested in solving a optimization problem of the form\n",
+    "\n",
+    "$$\\begin{gathered}\n",
+    "min_x c^T x \\text{ such that} \\\\\n",
+    "Ax \\geq b \\\\\n",
+    "Cx = d.\n",
+    "\\end{gathered}$$\n",
+    "\n",
+    "In quadratic programming (QP), we are interested in solving a problem of the form\n",
+    "\n",
+    "$$\\begin{gathered}\n",
+    "min_x \\frac{1}{2} x^T P x + q^T x + r \\text{ such that} \\\\\n",
+    "Ax \\geq b \\\\\n",
+    "Cx = d. \\\\\n",
+    "\\end{gathered}$$\n",
+    "\n",
+    "In both cases, the two classes of techniques that are most often used are active-set methods and interior-point methods.  Briefly speaking, active set methods iterate on a subset of inequality constraints that may be solved to equality.  With only equality constraints active, the minimizing direction of a LP or QP can be computed efficiently.  Interior point methods convert the inequality and equality constraints into *barrier functions* that penalize violation of constraints.  These penalties are incorporated into the objective function, which is then addressed using unconstrained optimization techniques.\n",
+    "\n",
+    "For QPs solvers to converge to a unique minimum, $P$ must either be [positive semi-definite](LinearAlgebra.ipynb#Positive-definiteness) or, for some solvers, strictly positive definite.  This is because for non-positive-definite matrices, the objective function is not convex, and there exist suboptimal local optima on the feasible set boundary.\n",
+    "\n",
+    "Professional-grade LP and QP software is widely available, highly reliable, and scales to thousands and even millions of variables and constraints. Example software packages include GLPK, Gurobi, and CVXOPT.  In order to get optimal scalability to large problems, the A, C, and P matrices ought to be representable using _sparse matrices_ (that is, $m\\times n$ matrices in which the number of nonzero entries is $O(m+n)$ rather than $O(mn)$), and a package that can exploit sparsity should be employed.\n",
+    "\n",
+    "\n",
+    "### Nonlinear programming\n",
+    "\n",
+    "In nonlinear programming (NLP), the $f$, $g$, and $h$ functions may be nonlinear.  Problems of this form can be solved to a local optimum using sequential quadratic programming (SQP) or interior-point methods. \n",
+    "\n",
+    "Note that due to nonlinearity, there is no guarantee of finding a global optimum, and moreover there is no guarantee that these methods will even find a point in the feasible set $ \\{ x \\,|\\, g(x) \\leq 0, h(x) = 0\\}$.\n",
+    "\n",
+    "Software for solving such problems are available in SNOPT, IPOPT, Matlab's `fmincon` function, and Scipy's [`minimize`](https://docs.scipy.org/doc/scipy/reference/optimize.minimize.html) function.  Although LP and QP problems are subsumed by the class of NLP problems, general NLP solvers are usually not as fast or reliable as special-purpose solvers.\n",
+    "\n"
    ]
   },
   {
@@ -338,21 +445,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
